SLT_Handler/Include/MMC/MMMCWHP220.h

INT API set_home(INT ax, INT action);
INT API get_home(INT ax, pINT action);
INT API set_home_level(INT ax, INT level);
INT API get_home_level(INT ax, pINT level);
INT API set_index_required(INT ax, INT index);
INT API get_index_required(INT ax, pINT index);
INT API io_interrupt_enable(INT bn, INT state);
INT API io_interrupt_on_stop(INT ax, INT state);
INT API io_interrupt_on_e_stop(INT ax, INT state);
INT API io_interrupt_pcirq(INT bn, INT state);
INT API io_interrupt_pcirq_eoi(INT bn);
INT API set_amp_fault(INT ax, INT action);
INT API get_amp_fault(INT ax, pINT action);
INT API set_amp_fault_level(INT ax, INT level);
INT API get_amp_fault_level(INT ax, pINT level);
INT API fget_amp_fault_level(INT ax, pINT level);
INT API set_amp_reset_level(INT ax, INT level);
INT API get_amp_reset_level(INT ax, pINT level);
INT API fget_amp_reset_level(INT ax, pINT level);
INT API get_analog(INT channel, pINT value);
INT API set_dac_output(INT ax, INT voltage);
INT API get_dac_output(INT ax, pINT voltage);
INT API fset_stepper(INT ax);
INT API fset_servo(INT ax);
INT API fset_feedback(INT ax, INT device);
INT API fset_closed_loop(INT ax, INT loop);
INT API fset_unipolar(INT ax, INT state);
INT API fset_micro_stepper(INT ax);
INT API fget_micro_stepper(INT ax);
INT API fset_amp_fault(INT ax, INT action);
INT API fset_control(INT axno, INT control);
INT API fset_electric_gear(INT axno, DOUBLE ratio);
INT API fset_step_mode(INT ax, INT mode);
INT API fset_home(INT ax, INT action);
INT API fset_index_required(INT ax, INT index);
INT API fio_interrupt_enable(INT bn, INT state);
INT API fio_interrupt_on_stop(INT ax, INT state);
INT API fio_interrupt_on_e_stop(INT ax, INT state);
INT API fio_interrupt_pcirq(INT bn, INT state);
INT API fset_positive_sw_limit(INT ax, DOUBLE limit, INT action);
INT API fset_negative_sw_limit(INT ax, DOUBLE limit, INT action);
INT API fset_positive_limit(INT ax, INT action);
INT API fset_negative_limit(INT ax, INT action);
INT API fset_in_position(INT ax, DOUBLE pos);
INT API fset_error_limit(INT ax, DOUBLE limit, INT action);
INT API fset_stop_rate(INT ax, INT rate);
INT API fset_e_stop_rate(INT ax, INT rate);
INT API fget_stepper(INT ax);
INT API fget_feedback(INT ax, pINT device);
INT API fget_closed_loop(INT ax, pINT loop);
INT API fget_unipolar(INT ax);
INT API fget_amp_fault(INT ax, pINT action);
INT API fget_control(INT axno, pINT control);
INT API fget_step_mode(INT ax, pINT mode);
INT API fget_home(INT ax, pINT action);
INT API fget_index_required(INT ax, pINT index);
INT API fget_positive_sw_limit(INT ax, pDOUBLE limit, pINT action);
INT API fget_negative_sw_limit(INT ax, pDOUBLE limit, pINT action);
INT API fget_positive_limit(INT ax, pINT action);
INT API fget_negative_limit(INT ax, pINT action);
INT API fget_in_position(INT ax, pDOUBLE pos);
INT API fget_error_limit(INT ax, pDOUBLE limit, pINT action);
INT API fget_stop_rate(INT ax, pINT rate);
INT API fget_e_stop_rate(INT ax, pINT rate);
INT API set_interpolation(INT Len, pINT ax, pLONG idelt_s, INT flag);
INT API frames_interpolation(INT ax);
INT API v_move_stop(INT ax);
INT API set_inposition_level(INT ax, INT level);
INT API fset_inposition_level(INT ax, INT level);
INT API get_inposition_level(INT ax, pINT level);
INT API fget_inposition_level(INT ax, pINT level);
INT API controller_idle(INT ax);
INT API controller_run(INT ax);
INT API arm_latch(INT bn, INT state);
INT API latch_status(INT bn);
INT API get_latched_position(INT ax, pDOUBLE pos);
INT API latch(INT bn);
INT API set_timer(INT bn, LONG time);
INT API get_timer(INT bn, pLONG time);
INT API fget_home_level(INT ax, pINT level);
INT API fget_positive_level(INT ax, pINT level);
INT API fget_negative_level(INT ax, pINT level);
INT API fset_amp_fault_level(INT ax, INT level);
INT API fset_amp_reset_level(INT ax, INT level);
INT API fset_amp_enable_level(INT ax, INT level);
INT API fget_pulse_ratio(INT axno, pINT ratio);
INT API fset_home_level(INT ax, INT level);
INT API fget_accel_limit(INT ax, pINT limit);
INT API fget_vel_limit(INT ax, pDOUBLE limit);
INT API fset_vel_limit(INT ax, DOUBLE limit);
INT API fset_positive_level(INT ax, INT level);
INT API fset_negative_level(INT ax, INT level);
INT API set_io_mode(INT bd_num, INT mode);
INT API fset_io_mode(INT bd_num, INT mode);
INT API get_io_mode(INT bd_num, pINT mode);
INT API fget_io_mode(INT bd_num, pINT mode);
INT API get_io_num(INT ax, pINT val);
INT API set_analog_offset(INT ax, INT voltage);
INT API fset_analog_offset(INT ax, INT voltage);
INT API get_analog_offset(INT ax, pINT voltage);
INT API fget_analog_offset(INT ax, pINT voltage);
INT API set_inposition_required(INT ax, INT inposflag);
INT API fset_inposition_required(INT ax, INT inposflag);
INT API get_inposition_required(INT ax, pINT inposflag);
INT API fget_inposition_required(INT ax, pINT inposflag);
INT API set_coordinate_direction(INT ax, INT direc);
INT API fset_coordinate_direction(INT ax, INT direc);
INT API get_coordinate_direction(INT ax, pINT direc);
INT API fget_coordinate_direction(INT ax, pINT direc);
INT API set_encoder_direction(INT ax, INT direc);
INT API fset_encoder_direction(INT ax, INT direc);
INT API get_encoder_direction(INT ax, pINT direc);
INT API fget_encoder_direction(INT ax, pINT direc);