SLT_Handler/Include/MMC/MMCWHP220.bas


Declare Function set_home Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_home Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_home_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_home_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_index_required Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_index_required Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function io_interrupt_enable Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal state As Integer) As Integer
Declare Function io_interrupt_on_stop Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal state As Integer) As Integer
Declare Function io_interrupt_on_e_stop Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal state As Integer) As Integer
Declare Function io_interrupt_pcirq Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal state As Integer) As Integer
Declare Function io_interrupt_pcirq_eoi Lib "MMCWHP220.dll" (ByVal bdNum As Integer) As Integer

Declare Function set_amp_fault Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_amp_fault Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_amp_fault_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_amp_fault_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_amp_fault_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_amp_reset_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_amp_reset_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_amp_reset_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function get_analog Lib "MMCWHP220.dll" (ByVal channel As Integer, val As Integer) As Integer
Declare Function set_dac_output Lib "MMCWHP220.dll" (ByVal channel As Integer, ByVal volt As Long) As Integer
Declare Function get_dac_output Lib "MMCWHP220.dll" (ByVal channel As Integer, volt As Long) As Integer

Declare Function fset_stepper Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function fset_servo Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function fset_feedback Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_closed_loop Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_unipolar Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer

Declare Function fset_micro_stepper Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function fget_micro_stepper Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer

Declare Function fset_amp_fault Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer

Declare Function fset_control Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_electric_gear Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double) As Integer
Declare Function fset_step_mode Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer

Declare Function fset_home Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_index_required Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer

Declare Function fio_interrupt_enable Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal state As Integer) As Integer
Declare Function fio_interrupt_on_stop Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal state As Integer) As Integer
Declare Function fio_interrupt_on_e_stop Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal state As Integer) As Integer
Declare Function fio_interrupt_pcirq Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal state As Integer) As Integer

Declare Function fset_positive_sw_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double, ByVal n As Integer) As Integer
Declare Function fset_negative_sw_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double, ByVal n As Integer) As Integer
Declare Function fset_positive_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_negative_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_in_position Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double) As Integer
Declare Function fset_error_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double, ByVal n As Integer) As Integer

Declare Function fset_stop_rate Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_e_stop_rate Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer

Declare Function fget_stepper Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function fget_feedback Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_closed_loop Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_unipolar Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer

Declare Function fget_amp_fault Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function fget_control Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_step_mode Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function fget_home Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_index_required Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function fget_positive_sw_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double, n As Integer) As Integer
Declare Function fget_negative_sw_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double, n As Integer) As Integer
Declare Function fget_positive_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_negative_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_in_position Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function fget_error_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double, n As Integer) As Integer

Declare Function fget_stop_rate Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_e_stop_rate Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function set_interpolation Lib "MMCWHP220.dll" (ByVal nlen As Integer, ax As Integer, delt_s As Long, ByVal flag As Integer) As Integer
Declare Function frames_interpolation Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer

Declare Function v_move_stop Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function set_inposition_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_inposition_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_inposition_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_inposition_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function controller_idle Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer
Declare Function controller_run Lib "MMCWHP220.dll" (ByVal ax As Integer) As Integer

Declare Function arm_latch Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal state As Integer) As Integer
Declare Function latch_status Lib "MMCWHP220.dll" (ByVal bdNum As Integer) As Integer
Declare Function get_latched_position Lib "MMCWHP220.dll" (ByVal ax As Integer, pos As Double) As Integer
Declare Function latch Lib "MMCWHP220.dll" (ByVal bdNum As Integer) As Integer

Declare Function set_timer Lib "MMCWHP220.dll" (ByVal bdNum As Integer, ByVal t As Long) As Integer
Declare Function get_timer Lib "MMCWHP220.dll" (ByVal bdNum As Integer, t As Long) As Integer

Declare Function fget_home_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_positive_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_negative_level Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function fset_amp_fault_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_amp_reset_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_amp_enable_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fget_pulse_ratio Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fset_home_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fget_accel_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_vel_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function fset_vel_limit Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal f As Double) As Integer
Declare Function fset_positive_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_negative_level Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer

Declare Function set_io_mode Lib "MMCWHP220.dll" (ByVal nBdNum As Integer, ByVal IoMode As Integer) As Integer
Declare Function fset_io_mode Lib "MMCWHP220.dll" (ByVal nBdNum As Integer, ByVal IoMode As Integer) As Integer
Declare Function get_io_mode Lib "MMCWHP220.dll" (ByVal nBdNum As Integer, IoMode As Integer) As Integer
Declare Function fget_io_mode Lib "MMCWHP220.dll" (ByVal nBdNum As Integer, IoMode As Integer) As Integer
Declare Function get_io_num Lib "MMCWHP220.dll" (ByVal ax As Integer, nval As Integer) As Integer

Declare Function set_analog_offset Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal volt As Integer) As Integer
Declare Function fset_analog_offset Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal volt As Integer) As Integer
Declare Function get_analog_offset Lib "MMCWHP220.dll" (ByVal ax As Integer, volt As Integer) As Integer
Declare Function fget_analog_offset Lib "MMCWHP220.dll" (ByVal ax As Integer, volt As Integer) As Integer

Declare Function set_inposition_required Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function fset_inposition_required Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_inposition_required Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fget_inposition_required Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer

Declare Function fget_coordinate_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function get_coordinate_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fset_coordinate_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function set_coordinate_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer

Declare Function fget_encoder_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function get_encoder_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function fset_encoder_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function set_encoder_direction Lib "MMCWHP220.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
